--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Password Protected Video</title>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      const correctPassword = "mypassword";
+      const correctPassword = "csakagk";
       let entered = prompt("Enter the password to view this page:");
 
       if (entered === correctPassword) {
